@@ -1,3 +1,8 @@
+2010-04-19  "Gabor Gombas"
+
+	* Morgan Stanley internal build
+	- Added support for partiton alignment.
+
 2008-09-21  "Luis Fernando"
 
 	* Release: 0.19.0
